--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
         <div class="progress-bar progress-bar-striped bg-mtc progress-bar-animated" style="width: 25%">25%</div>
       </div>
     </div>
-    <video width="100%" height="100%" autoplay muted><source src="./video/cinematic.webm" type="video/webm"></video>
+    <video width="100%" height="100%" autoplay muted><source src="./video/NAMEHERE.webm" type="video/webm"></video>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
   
