--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
           <div class="col-4 text-end"><p>Powered by More Than Code</p></div>
         </div>
       </div>
-      <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
+      <div class="progress" role="progressbar" aria-label="Progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
         <div class="progress-bar progress-bar-striped bg-mtc progress-bar-animated" style="width: 25%">25%</div>
       </div>
     </div>
