--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="progress" role="progressbar" aria-label="Progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
-        <div class="progress-bar progress-bar-striped bg-mtc progress-bar-animated" style="width: 25%">25%</div>
+        <div class="progress-bar progress-bar-striped bg-mtc progress-bar-animated" style="width: 25%"></div>
       </div>
     </div>
     <video width="100%" height="100%" autoplay muted><source src="./video/NAMEHERE.webm" type="video/webm"></video>
