--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
       <div class="content">
         <div class="row align-items-center">
           <div class="col-6 text-begin">
-            <h1>Servername<span>is loading...</span></h1>
+            <h1>Servername<span><div id="sentence" class="sentence">is loading...</div></span></h1>
           </div>
           <div class="col-2 text-center"><img src="./img/logo.png" alt="More Than Code" class="logo"></div>
           <div class="col-4 text-end"><p>Powered by More Than Code</p></div>
@@ -25,6 +25,9 @@
       </div>
     </div>
     <video width="100%" height="100%" autoplay muted><source src="./video/NAMEHERE.webm" type="video/webm"></video>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+    <script src="./js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
   
