feat! delete h1 -> span.

--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
       <div class="content">
         <div class="row align-items-center">
           <div class="col-6 text-begin">
-            <h1><span><div id="sentence" class="sentence">Loading...</div></span></h1>
+            <h1><div id="sentence" class="sentence">Loading...</div></h1>
           </div>
           <div class="col-2 text-center"><img src="./img/logo.png" alt="More Than Code" class="logo"></div>
           <div class="col-4 text-end"><p>Powered by More Than Code</p></div>
