--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
         <div class="progress-bar progress-bar-striped bg-mtc progress-bar-animated" style="width: 25%"></div>
       </div>
     </div>
-    <video width="100%" height="100%" autoplay muted><source src="./video/NAMEHERE.webm" type="video/webm"></video>
+    <video width="100%" height="100%" autoplay muted loop><source src="./video/NAMEHERE.webm" type="video/webm"></video>
 
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
     <script src="./js/app.js"></script>
