--- a/web/index.html
+++ b/web/index.html
@@ -20,11 +20,13 @@
           <div class="col-4 text-end"><p>Powered by More Than Code</p></div>
         </div>
       </div>
-      <div class="progress" role="progressbar" aria-label="Progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
-        <div class="progress-bar progress-bar-striped bg-mtc progress-bar-animated" style="width: 25%"></div>
+      <div class="spinner">
+        <div class="spinner-border text-light" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
       </div>
     </div>
-    <video width="100%" height="100%" autoplay muted loop><source src="./video/NAMEHERE.webm" type="video/webm"></video>
+    <video width="100%" height="100%" autoplay muted loop><source src="./video/loading.webm" type="video/webm"></video>
 
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
     <script src="./js/app.js"></script>
